--- a/README.org
+++ b/README.org
@@ -63,9 +63,14 @@ the page shown when Sinomacs starts up, to re-display it press F1
        in a convenient place and start Emacs by going to the bin
        folder and double-clicking on emacs.exe.  You may want to set
        up a short-cut.
-	
-     * Mac: [[https://emacsformacosx.com][Download Emacs]].  Install and run the application as normal.
-	
+
+     * Mac: Make sure that you have the OS X / macOS command line tools installed. Simply copy-paste the following into the terminal and hit return:
+	 #+BEGIN_EXAMPLE
+	 xcode-select --install
+	 #+END_EXAMPLE
+	 
+	Emacs from the Terminal wont play well with sinomacs, instead go to [[https://emacsformacosx.com][Download Emacs]] and install and run the application as normal. Users of os X < 10.11 will see warnings when trying to establish secure connections. To workaround this follow the prompts inside emacs and accept connections despite the warnings.  
+
      * Linux: Install via your package manager.
 
   - Get Sinomacs:
@@ -101,7 +106,7 @@ the page shown when Sinomacs starts up, to re-display it press F1
        (concat sinomacs-dir "sinomacs-help.txt"))
       (delete-other-frames)
       (goto-char (point-min))))
-#+END_EXAMPLE 
+#+END_EXAMPLE
      *Note* =git= is a program that is used behind the scenes to keep
      track of changes in files, and to download or upload these files
      from/to remote computers. The Windows bundle mentioned above
@@ -136,14 +141,14 @@ the page shown when Sinomacs starts up, to re-display it press F1
        download (clone) a workspace from GitHub. Otherwise, deal with
        Github later and continue without a workspace. Do you want to
        download it now?"
-       
-       You should either answer "yes", if you have a [[http://github.com][GitHub]] accound
+
+       You should either answer "yes", if you have a [[http://github.com][GitHub]] account
        and are ready to download the additional files. If you answer
        "no" here, you will be presented with the same question next
        time you start Emacs.
 
     3. "Git needs a name to identify you. How should git call you?"
-       
+
        The name you use here will be saved locally and used in
        communications with GitHub, this will be used, together with
        the email alias (see next question) to identify you and credit
@@ -152,13 +157,13 @@ the page shown when Sinomacs starts up, to re-display it press F1
 
     4. "Git needs an email alias to identify you. How should git mail
        you?"
-       
+
        The email you enter here does not need to be a valid one, it
        will not be used to actually send mail to you, but only for git
        based communications.  If you want to take credit for your
        contributions on GitHub, it would make sense to use the same
        email alias that you used when signing up with Github.
-  
+
   - Sinomacs is now installed. The whole process might take 10-15
     minutes, depending on the speed of your network connection and
     computer.  You may want to install some auxiliary programmes such
