--- a/README.org
+++ b/README.org
@@ -64,14 +64,13 @@ the page shown when Sinomacs starts up, to re-display it press F1
        folder and double-clicking on emacs.exe.  You may want to set
        up a short-cut.
 
+     * Linux: Install via your package manager.
      * Mac: Make sure that you have the OS X / macOS command line tools installed. Simply copy-paste the following into the terminal and hit return:
 	 #+BEGIN_EXAMPLE
 	 xcode-select --install
 	 #+END_EXAMPLE
 	 
-       Emacs from the Terminal wont play well with sinomacs, instead go to [[https://emacsformacosx.com][Download Emacs]] and install and run the application as normal. Users of os X < 10.11 will see warnings when trying to establish secure connections. To workaround this follow the prompts inside emacs and accept connections despite the warnings.  
-
-     * Linux: Install via your package manager.
+       Note: Emacs from the Terminal wont play well with sinomacs, instead go to [[https://emacsformacosx.com][Download Emacs]] and install and run the application as normal. Users of os X < 10.11 will see warnings when trying to establish secure connections. To workaround this follow the prompts inside emacs and accept connections despite the warnings.  
 
   - Get Sinomacs:
 
